--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,12 +4,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:adjustViewBounds="true"
+        android:scaleType="fitStart"
+        android:src="@drawable/logo"
+        />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20sp"
+        />
+
     <EditText
         android:id="@+id/edit_school_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:hint="学号"
+        android:hint="输入学号"
         />
 
     <Button
@@ -30,6 +44,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textAllCaps="false"
+        android:textSize="16sp"
         android:text="没有账号？去注册..."
         />
 
